--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"natural": "^6.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-json-view": "^1.21.3",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.1",
