--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fullpage/react-fullpage": "^0.1.39",
 		"@reduxjs/toolkit": "^1.9.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -13,8 +14,8 @@
 		"@types/react-dom": "^18.0.10",
 		"axios": "^1.3.4",
 		"natural": "^6.2.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
 		"react-json-view": "^1.21.3",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.2.2",
