--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.58.1",
 		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"react-google-login": "5.2.2",
+		"jwt-decode": "^3.1.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
