--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@fullpage/react-fullpage": "^0.1.39",
 		"@reduxjs/toolkit": "^1.9.3",
+		"@sentry/react": "^7.50.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.10",
 		"axios": "^1.3.4",
+		"jwt-decode": "^3.1.2",
 		"natural": "^6.2.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
@@ -23,9 +25,7 @@
 		"redux-persist": "^6.0.0",
 		"sass": "^1.58.1",
 		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4",
-		"react-google-login": "5.2.2",
-		"jwt-decode": "^3.1.2"
+		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
